[package]
name = "dice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dice"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0" ,features=["init-if-needed"]}
anchor-spl = "0.28.0"
solana-program = "1.16.13"
